added jwt token to the auth and added requiring them in the api calls.
